[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
requests = "^2.27.1"
tinydb = "^4.7.0"
Pillow = "^9.1.1"
discord = "^1.7.3"
discord-webhook = "^0.16.3"
PyNaCl = "^1.5.0"
ffmpeg = "^1.4"
youtube-dl2 = "^2.0"
youtube_dl = "^2021.12.17"
ffprobe = "^0.5"
pypi-libavwrapper = "^0.0.1"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"